@@ -20,7 +20,7 @@ LEFT OUTER JOIN (SELECT * FROM dbo.MetadataDomainDetail WHERE dbo.MetadataDomain
 LEFT OUTER JOIN (SELECT * FROM dbo.MetadataDomainDetail WHERE dbo.MetadataDomainDetail.DomainID = 1273) AS pt ON dbo.pedon.pedontype = pt.ChoiceValue)
 
 LEFT OUTER JOIN (SELECT * FROM dbo.MetadataDomainDetail WHERE dbo.MetadataDomainDetail.DomainID = 971) AS hs ON dbo.site.hillslopeprof = hs.ChoiceValue
-ORDER BY dbo.site.usiteid ;"
+ORDER BY dbo.pedon.peiid ;"
 	
 	# setup connection to our local NASIS database
 	channel <- odbcConnect('nasis_local', uid='NasisSqlRO', pwd='nasisRe@d0n1y') 
@@ -41,9 +41,10 @@ ORDER BY dbo.site.usiteid ;"
 	
 	# are there any duplicate pedon IDs?
 	t.pedon_id <- table(d$pedon_id)
-	if(any(t.pedon_id > 1)) {
-		message('NOTICE: duplicate pedons:')
-		print(t.pedon_id[which(t.pedon_id > 1)])
+	not.unique.pedon_id <- t.pedon_id > 1
+	if(any(not.unique.pedon_id)) {
+		message('NOTICE: duplicate pedons or multiple pedons / site:', appendLF=FALSE)
+		print(t.pedon_id[which(not.unique.pedon_id)])
 	}
 	
 	# warn about sites without a matching pedon (records missing peiid)
@@ -51,7 +52,6 @@ ORDER BY dbo.site.usiteid ;"
 	if(length(missing.pedon)> 0) {
 		message(paste('NOTICE: sites without pedons:', paste(unique(d$site_id[missing.pedon]), collapse=', ')))
 	}
-		
 	
 	# done
 	return(d)
