@@ -1,5 +1,6 @@
 -------------------------- soilDB 0.9-3 (2013-01-08) ----------------------------
 * speed-bump in color-fetching functions from NASIS/pedonPC
+* fetchNASIS() now attempts to correct for >1 pedon/site by appending peiid to pedon_id
 
 -------------------------- soilDB 0.9-2 (2012-12-18) ----------------------------
 * new functions for getting / plotting the geographic extent of a soil series, using the SoilWeb query service:
